--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,3 +14,5 @@ jobs:
           python-version: "3.13"
       - run: pip install mkdocs mkdocs-gitbook
       - run: mkdocs gh-deploy --force
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
