--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:16
@@ -29,10 +27,9 @@ services:
       DATABASE_URL: ${DATABASE_URL}
     volumes:
       - ./backend:/app
-    command: >
-      bash -lc "python manage.py runserver 0.0.0.0:8000"
-      # Once the Django project exists, replace with gunicorn:
-      # gunicorn config.wsgi:application --bind 0.0.0.0:8000
+    command: ["/bin/sh", "-c", "echo Backend container placeholder; tail -f /dev/null"]
+    # Once the Django project exists, replace with gunicorn:
+    # command: ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
     ports:
       - "8000:8000"
     depends_on:
@@ -49,8 +46,7 @@ services:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     volumes:
       - ./frontend:/app
-    command: >
-      bash -lc "npm run dev -- --hostname 0.0.0.0 --port 3000"
+    command: ["/bin/sh", "-c", "echo Frontend container placeholder; tail -f /dev/null"]
     ports:
       - "3000:3000"
     depends_on:
@@ -71,8 +67,8 @@ services:
     environment:
       # Provide the upstream hosts when configuration templates are ready.
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/conf.d
-      # UPSTREAM_BACKEND: http://backend:8000
-      # UPSTREAM_FRONTEND: http://frontend:3000
+      UPSTREAM_BACKEND: ${UPSTREAM_BACKEND:-http://backend:8000}
+      UPSTREAM_FRONTEND: ${UPSTREAM_FRONTEND:-http://frontend:3000}
 
 volumes:
   postgres-data:
