--- a/.env.example
+++ b/.env.example
@@ -11,13 +11,19 @@ POSTGRES_HOST=db
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # Django
-DJANGO_SETTINGS_MODULE=config.settings
+DJANGO_SETTINGS_MODULE=assets_backend.settings
 DJANGO_SECRET_KEY=change-me
 DJANGO_DEBUG=1
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Next.js
 NEXT_PUBLIC_API_URL=http://localhost:8000/api
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Proxy
+PROXY_HTTP_PORT=8080
+PROXY_HTTPS_PORT=8443
 
 # Redis
 REDIS_HOST=redis
