--- a/deploy/nginx/conf.d/default.conf.template
+++ b/deploy/nginx/conf.d/default.conf.template
@@ -2,13 +2,13 @@ server {
     listen 80;
 
     location /api/ {
-        proxy_pass ${UPSTREAM_BACKEND:-http://backend:8000};
+        proxy_pass ${UPSTREAM_BACKEND};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location / {
-        proxy_pass ${UPSTREAM_FRONTEND:-http://frontend:3000};
+        proxy_pass ${UPSTREAM_FRONTEND};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
