--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,33 @@
 {
-  "name": "assets-frontend-placeholder",
-  "version": "0.0.0",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@nextui-org/react": "^2.6.11",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.24",
+    "next": "14.2.12",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.66.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.4.1",
+    "zustand": "^5.0.8"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.12",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
